--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -56,7 +56,7 @@ level1{
     height:inherit;
     background-repeat: no-repeat;
     background-size: 150%;
-    background-image: url(../images/base.png);
+    background-image: url(../images/base2.png);
 }
 
 start_character{
@@ -79,6 +79,12 @@ character{
     width: 26px;
     height: 40px;
     background-size: 100%;
+}
+spike{
+    width: 20px;
+    height: 20px;
+    background-size: 100%;
+    background-image: url(../images/spike.png);
 }
 
 .idle{
